# cc_library_repro_2

./: BUILD.bazel  WORKSPACE  hello-lib.cc  hello-lib.h  hello-world.cc
