load("@rules_cc//cc:defs.bzl", "cc_library", "cc_import", "cc_binary", "cc_test")

cc_binary(
    name = 'libhello-lib.so',
    srcs = ['hello-lib.cc', 'hello-lib.h'],
    linkshared = 1,
    data = ['file1.dat'],
)

cc_import(
    name = 'hello-lib-import',
    shared_library = ':libhello-lib.so',
    data = ['file2.dat'],
)

# Create a new cc_library to also include the headers needed for the shared library
cc_library(
    name = 'hello-lib',
    hdrs = ['hello-lib.h'],
    deps = ['hello-lib-import'],
    data = ['file3.dat'],
)

cc_test(
    name = "hello-world",
    srcs = ["hello-world.cc"],
    deps = [":hello-lib"],
    data = ['file4.dat'],
)

